this will fix a bug on mobile which made the skills section scrollable

--- a/styles.css
+++ b/styles.css
@@ -363,7 +363,7 @@ footer {
 
   .skills-pattern-image {
     position: absolute;
-    top: 24rem;
+    top: 20rem;
     right: -16rem;
   }
 
